feat: add Roboto font

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-		<meta name="googlebot" content="notranslate" />
+  <head>
+    <meta charset="UTF-8" />
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <meta name="googlebot" content="notranslate" />
 
-		<title>Todo: Title</title>
-		<meta name="description" content="Todo: Description." />
-		<meta name="keywords" content="Todo: Keywords." />
-		<link rel="icon" type="image/x-icon" href="Todo: Icon." />
-		<div id="head"></div>
-	</head>
-	<body style="margin: 0">
-		<div id="body"></div>
-	</body>
+    <title>Todo: Title</title>
+    <meta name="description" content="Todo: Description." />
+    <meta name="keywords" content="Todo: Keywords." />
+    <link rel="icon" type="image/x-icon" href="Todo: Icon." />
+    <link rel="stylesheet" href="./font/font.css" />
+    <div id="head"></div>
+  </head>
+  <body style="margin: 0">
+    <div id="body"></div>
+  </body>
 </html>
